sumo/tests/duarouter/errors/network/edge/lane/root__edge__lane#maxspeed__false12/errors.duarouter
Error: Not numerical maxspeed definition in lane '1_1'.
Quitting (on error).
